Заполнение модели аккаутов
