# bank-front-app/src/main/java/ru/yandex/practicum/mybankfront/controller/MainController.java
@@ -1,37 +1,47 @@
 package ru.yandex.practicum.mybankfront.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.ReactiveSecurityContextHolder;
+import org.springframework.security.core.context.SecurityContext;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import reactor.core.publisher.Mono;
 import ru.yandex.practicum.mybankfront.controller.dto.CashAction;
+import ru.yandex.practicum.mybankfront.controller.dto.ModelDto;
 import ru.yandex.practicum.mybankfront.controller.stub.AccountStub;
 import ru.yandex.practicum.mybankfront.service.AccountsService;
+import ru.yandex.practicum.mybankfront.service.ModelService;
 import ru.yandex.server.domain.UserAccount;
+import ru.yandex.server.domain.UserAccountSmall;
 
 import java.time.LocalDate;
+import java.util.List;
 
 /**
  * Контроллер main.html.
- *
+ * <p>
  * Используемая модель для main.html:
- *      model.addAttribute("name", name);
- *      model.addAttribute("birthdate", birthdate.format(DateTimeFormatter.ISO_DATE));
- *      model.addAttribute("sum", sum);
- *      model.addAttribute("accounts", accounts);
- *      model.addAttribute("errors", errors);
- *      model.addAttribute("info", info);
- *
+ * model.addAttribute("name", name);
+ * model.addAttribute("birthdate", birthdate.format(DateTimeFormatter.ISO_DATE));
+ * model.addAttribute("sum", sum);
+ * model.addAttribute("accounts", accounts);
+ * model.addAttribute("errors", errors);
+ * model.addAttribute("info", info);
+ * <p>
  * Поля модели:
- *      name - Фамилия Имя текущего пользователя, String (обязательное)
- *      birthdate - дата рождения текущего пользователя, String в формате 'YYYY-MM-DD' (обязательное)
- *      sum - сумма на счету текущего пользователя, Integer (обязательное)
- *      accounts - список аккаунтов, которым можно перевести деньги, List<AccountDto> (обязательное)
- *      errors - список ошибок после выполнения действий, List<String> (не обязательное)
- *      info - строка успешности после выполнения действия, String (не обязательное)
- *
+ * name - Фамилия Имя текущего пользователя, String (обязательное)
+ * birthdate - дата рождения текущего пользователя, String в формате 'YYYY-MM-DD' (обязательное)
+ * sum - сумма на счету текущего пользователя, Integer (обязательное)
+ * accounts - список аккаунтов, которым можно перевести деньги, List<AccountDto> (обязательное)
+ * errors - список ошибок после выполнения действий, List<String> (не обязательное)
+ * info - строка успешности после выполнения действия, String (не обязательное)
+ * <p>
  * С примерами использования можно ознакомиться в тестовом классе заглушке AccountStub
  */
 @Controller
@@ -42,6 +52,8 @@ public class MainController {
 
     @Autowired
     private AccountsService accountsService;
+    @Autowired
+    private ModelService modelService;
 
     /**
      * GET /.
@@ -61,11 +73,17 @@ public class MainController {
      */
     @GetMapping("/account")
     public String getAccount(Model model) {
+        System.out.println("I'm here");
         // TODO: Заменить на то, что описано в комментарии к методу
 
         UserAccount account = accountsService.getAccount();
+        List<UserAccountSmall> accounts = accountsService.getAccounts();
+        ModelDto modelDto = modelService.createModel(account, accounts);
 
-        accountStub.fillModel(model, null, null);
+        modelService.fillModel(model, modelDto, null, null);
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        ((OidcUser) authentication.getPrincipal()).getPreferredUsername();
 
 
         return "main";
@@ -77,7 +95,7 @@ public class MainController {
      * 1. Сходить в сервис accounts через Gateway API для изменения данных текущего пользователя по REST
      * 2. Заполнить модель main.html полученными из ответа данными
      * 3. Текущего пользователя можно получить из контекста Security
-     *
+     * <p>
      * Изменяемые данные:
      * 1. name - Фамилия Имя
      * 2. birthdate - дата рождения в формате YYYY-DD-MM
@@ -101,7 +119,7 @@ public class MainController {
      * 1. Сходить в сервис cash через Gateway API для снятия/пополнения счета текущего аккаунта по REST
      * 2. Заполнить модель main.html полученными из ответа данными
      * 3. Текущего пользователя можно получить из контекста Security
-     *
+     * <p>
      * Параметры:
      * 1. value - сумма списания
      * 2. action - GET (снять), PUT (пополнить)
@@ -111,7 +129,7 @@ public class MainController {
             Model model,
             @RequestParam("value") int value,
             @RequestParam("action") CashAction action
-            ) {
+    ) {
         // TODO: Заменить на то, что описано в комментарии к методу
         accountStub.editCash(model, value, action);
 
@@ -124,7 +142,7 @@ public class MainController {
      * 1. Сходить в сервис accounts через Gateway API для перевода со счета текущего аккаунта на счет другого аккаунта по REST
      * 2. Заполнить модель main.html полученными из ответа данными
      * 3. Текущего пользователя можно получить из контекста Security
-     *
+     * <p>
      * Параметры:
      * 1. value - сумма списания
      * 2. login - логин пользователя получателя
